# Yggdrasil

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
addons/fembed/: main.py  routers.py  utils.py
app/: __init__.py  dependencies.py  main.py
app/core/: config.py  engines.py  interfaces.py  security.py
app/routers/: manifest.py  proxy.py  streams.py
app/schemas/: content.py
app/services/: addon_engine.py  id_service.py
app/utils/: hls_utils.py  network.py
