[project]
name = "yggdrasil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asgi-correlation-id>=4.3.4",
    "beautifulsoup4>=4.14.3",
    "crawlee[all]>=1.2.1",
    "fastapi[standard]>=0.128.0",
    "httpx[http2]>=0.28.1",
    "parsel>=1.10.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]
